--- a/index.html
+++ b/index.html
@@ -1,135 +1,109 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Portfolio website</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/portfolio.css">
+    <title>Portfolio!</title>
+    
 	<link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="hero">
+        <!-- Navbar -->
+   <div class="row main-navbar">
+    <div class="col-11 mx-auto">
+       <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <h4 class="logo"><b>Portfo</b><span><b>lio</b></span></h4>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#fff" class="bi bi-list" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+              </svg>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Apropos de moi</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Service</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Skill</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Team</a>
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Contact</a>
+                  </li>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+    </div>
+ </div>
+ <!-- / navbar -->
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Slider -->
+  <div class="row slider">
+   <div class="col-10 mx-auto">
+     <div class="row">
+      <section class="col-8 content>">
+        <h4 class="bonjour"><b>Bonjour, je m'appel</b></h4>
+        <h1 class="name"><b>Thomas</b> <span><b>Cisse</b></span></h1>
+        <h3 class="description"><b>Je suis developpeur full-stak junior.</b></h3>
+      </section>
+     </div>
+   </div>
+  </div>
+  <!-- / Slider -->
+    </div>
 
-</head>
-<body>
-	<!----hero Section start---->
+    <!-- About me -->
+    <!-- / About me -->
 
-	<div class="hero">
-		<nav>
-			<h2 class="logo">Portfo<span>lio</span></h2>
-			<ul>
-				<li><a href="#">Accueil</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="#">Skills</a></li>
-				<li><a href="#">Contactez moi</a></li>
-			</ul>
-			<a href="#" class="btn">Suggestions</a>
-		</nav>
+    <!-- Experience -->
+    <!-- / Experience -->
 
-		<div class="content">
-			<h4>Bonjour, je m'appel</h4>
-			<h1>Thomas <span>Cisse</span></h1>
-			<h3>Je suis un developpeur web.</h3>
-			<div class="newslatter">
-				<form>
-					<input type="text" name="text" id="mail" placeholder="message">
-					<input type="submit" name="submit" value="Envoyer">
-				</form>
-			</div>
-		</div>
-	</div>
+    <!-- Contact me -->
+    <!-- / Contact me -->
 
-	<!----About section start---->
-	<section class="about">
-		<div class="main">
-			<img src="img/main-img.jpg">
-			<div class="about-text">
-				<h2>Biographie</h2>
-				<h5>Developpeur <span>& Designer</span></h5>
-				<p>Je suis un développeur web full stack. Je peux fournir un code propre et une conception parfaite.
-					 Je rends également le site plus et plus interactif avec des animations web.
-					  Je peux fournir un design parfait des pixels,
-					   Un design responsive rend votre site accessible à tous les utilisateurs, ....</p>
-				<button type="button">Questions</button>
-			</div>
-		</div>
-	</section>
+    <!-- Footer -->
+    <!-- / Footer -->
 
-	<!-----service section start----------->
-	<div class="service">
-		<div class="title">
-			<h2>Mes parcours</h2>
-		</div>
 
-		<div class="box">
-			<div class="card">
-				<i class="fas fa-bars"></i>
-				<h5>Formations</h5>
-				<div class="pra">
-					<p>2021 devellopement web et mobile<br>
-					   2019 Gestion de projet d'entreprise et de devellopement<br>
-					   2018 Licence socioogie<br>
-					   2014 Baccalaureat<br>
-					</p>
 
-					<p style="text-align: center;">
-						<a class="button" href="#">Plus</a>
-					</p>
-				</div>
-			</div>
 
-			<div class="card">
-				<i class="fas fa-bars"></i>
-				<h5>Experience</h5>
-				<div class="pra">
-					<p>2016 a aujourd'hui agent commercial et technicien canal+<br>
-					   2017 a aujourd'hui cofondateur et responssable de la communication au centre d'information et d'orientation universitaire (CIOU)<br></p>
 
-					<p style="text-align: center;">
-						<a class="button" href="#">Plus</a>
-					</p>
-				</div>
-			</div>
 
-			<div class="card">
-				<i class="fas fa-bars"></i>
-				<h5>Competences</h5>
-				<div class="pra">
-					<p>- Maquettage d'application<br>
-					   - Realisation d'interface utilisateur web statique et adaptable<br>
-					   - Realisation de base de donnees<br>
-					</p>
-					<p style="text-align: center;">
-						<a class="button" href="#">plus</a>
-					</p>
-				</div>
-			</div>
-		</div>
-	</div>
 
-	<!------Contact Me------>
-	<div class="contact-me">
-		<p>Personnes a contacter</p>
-		<nav>
-		<ul>
-			<li><a href="#">M. Kaou Diallo</a></li>
-			<li><a href="#">Mme Dembele fatoumata Kaloga</a></li>
-			<li><a href="#">M. Fouseini Dembele</a></li>
-			<li><a href="#">M. Bilal Diaby</a></li>
-		</ul>
-		</nav>
-		<!-- <a class="button-two" href="#">Hire Me</a> -->
-	</div>
 
-	<!------footer start--------->
-	<footer>
-		<p>Thomas Cisse</p>
-		<p>Pour plus de tutoriel HTML, CSS, et de codage - s’il vous plaît cliquez sur le lien ci-dessous pour vous abonner à mon canal :</p>
-		<div class="social">
-			<a href="#"><i class="fab fa-facebook-f"></i></a>
-			<a href="#"><i class="fab fa-instagram"></i></a>
-			<a href="#"><i class="fab fa-dribbble"></i></a>
-		</div>
-		<p class="end">CopyRight By Thomas Cisse</p>
-	</footer>
-</body>
-</html>
+
+
+
+
+
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
+  </body>
