--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
   <div class="row slider">
    <div class="col-10 mx-auto">
      <div class="row">
-      <section class="col-8 content>">
-        <h4 class="bonjour"><b>Bonjour, je m'appel</b></h4>
-        <h1 class="name"><b>Thomas</b> <span><b>Cisse</b></span></h1>
+      <section class="col-sm-12 col-lg-6">
+        <div>
+          <h4 class="bonjour"><b>Bonjour, je m'appel</b></h4>
+        <h1 class="name"><b>Thomas</b> <span><b>Cissé</b></span></h1>
         <h3 class="description"><b>Je suis developpeur full-stak junior.</b></h3>
+        </div>
       </section>
      </div>
    </div>
@@ -71,7 +73,40 @@
   <!-- / Slider -->
     </div>
 
-    <!-- About me -->
+  <!-- About me -->
+   <div id="about">
+    <div class="row about">
+      <div class="col-11 mx-auto">
+        <div class="row">
+          <div class="col-md-6">
+            <img class="about-image" src="./img/main-img.jpg">
+          </div>
+          <div class="col-md-6 about-text">
+            <h2>A propos</h2>
+            <h3>Je suis Thomas</h3>
+            <p>Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
+               fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
+               créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia</p>
+               <div class="line"></div>
+               <div class="col-md-6">
+                <table>
+                  <tbody>
+                    <tr>
+                      <th>Name:</th>
+                      <td>T</td>
+                    </tr>
+                    <tr>
+                      <th>Age:</th>
+                      <td>T</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+   </div>
     <!-- / About me -->
 
     <!-- Experience -->
