--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
                créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia</p>
                <div class="line"></div>
-               <div class="col-md-6">
+               <div class="col-md-6"><br>
+                 <h3>Informations personnel</h3>
                 <table>
                   <tbody>
                     <tr>
@@ -97,6 +98,10 @@
                     </tr>
                     <tr>
                       <th>Age:</th>
+                      <td>T</td>
+                    </tr>
+                    <tr>
+                      <th>Nationalité:</th>
                       <td>T</td>
                     </tr>
                   </tbody>
