--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <img class="about-image" src="./img/main-img.jpg">
           </div>
           <div class="col-md-6 about-text">
-            <h2>A propos</h2>
+            <h2>Biographie</h2>
             <h3>Je suis Thomas</h3>
             <p>Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
                fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
@@ -101,11 +101,16 @@
                       <td>T</td>
                     </tr>
                     <tr>
+                      <th>Adresse:</th>
+                      <td>Kalaban Coura ACI</td>
+                    </tr>
+                    <tr>
                       <th>Nationalité:</th>
-                      <td>T</td>
+                      <td>Malienne</td>
                     </tr>
                   </tbody>
                 </table>
+                <button class="btn btn-danger mt-3">Télécharger CV</button>
               </div>
           </div>
         </div>
@@ -115,6 +120,54 @@
     <!-- / About me -->
 
     <!-- Experience -->
+    <div class="row exper">
+      <div class="col-11 mx-auto">
+        <div class="row">
+          <h2 class="mt-3 parcours">Mes Parcours</h2>
+          <!-- card -->
+          <div class="box">
+            <div class="row">
+              <div class="col-12 col-lg-4">
+                <div class="card">
+                  <i class="fas fa-bars"></i>
+                  <div class="card-body">
+                    <h5 class="card-title">Formations</h5>
+                    <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
+                      fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
+                      créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia </p>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="col-12 col-lg-4">
+                <div class="card">
+                  <i class="fas fa-bars"></i>
+                  <div class="card-body">
+                    <h5 class="card-title">Formations</h5>
+                    <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
+                      fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
+                      créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia </p>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="col-12 col-lg-4">
+                <div class="card">
+                  <i class="fas fa-bars"></i>
+                  <div class="card-body">
+                    <h5 class="card-title">Formations</h5>
+                    <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
+                      fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
+                      créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- / card -->
+        </div>
+      </div>
+    </div>
     <!-- / Experience -->
 
     <!-- Contact me -->
