--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <h4 class="logo"><b>Portfo</b><span><b>lio</b></span></h4>
+              <img class="logo" src="./img/logo.png" >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#fff" class="bi bi-list" viewBox="0 0 16 16">
@@ -34,7 +34,7 @@
                   <a class="nav-link active" aria-current="page" href="#">Accueil</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Apropos de moi</a>
+                  <a class="nav-link active" aria-current="page" href="#">A propos</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">Service</a>
@@ -119,46 +119,55 @@
    </div>
     <!-- / About me -->
 
-    <!-- Experience -->
+    <!-- Parcours -->
     <div class="row exper">
       <div class="col-11 mx-auto">
         <div class="row">
-          <h2 class="mt-3 parcours">Mes Parcours</h2>
+          <h2 class="mt-10 parcours">Mes Parcours</h2>
           <!-- card -->
           <div class="box">
             <div class="row">
-              <div class="col-12 col-lg-4">
+              <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card">
                   <i class="fas fa-bars"></i>
                   <div class="card-body">
                     <h5 class="card-title">Formations</h5>
-                    <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
-                      fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
-                      créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia </p>
+                    <div class="para">
+                      <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
+                        fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
+                        créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia </p>
+                       <!-- <p style="text-align: center;">
+                        <a class="button" href="#">Plus</a>
+                       </p> -->
+                    </div>
                   </div>
                 </div>
               </div>
   
-              <div class="col-12 col-lg-4">
+              <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card">
                   <i class="fas fa-bars"></i>
                   <div class="card-body">
                     <h5 class="card-title">Formations</h5>
-                    <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
-                      fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
-                      créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia </p>
+                    <div class="para">
+                      <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
+                        fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
+                        créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia </p>
+                    </div>
                   </div>
                 </div>
               </div>
   
-              <div class="col-12 col-lg-4">
+              <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="card">
                   <i class="fas fa-bars"></i>
                   <div class="card-body">
                     <h5 class="card-title">Formations</h5>
-                    <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
-                      fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
-                      créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia </p>
+                    <div class="para">
+                      <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
+                        fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
+                        créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia </p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -168,12 +177,19 @@
         </div>
       </div>
     </div>
-    <!-- / Experience -->
+    <!-- / Parcours -->
 
     <!-- Contact me -->
     <!-- / Contact me -->
 
     <!-- Footer -->
+    <div class="row">
+      <div class="">
+        <div class="">
+
+        </div>
+      </div>
+    </div>
     <!-- / Footer -->
 
 
