--- a/index.html
+++ b/index.html
@@ -179,6 +179,25 @@
     </div>
     <!-- / Parcours -->
 
+    <!-- competence -->
+    <div class="row">
+      <div class="col-sm-12">
+        <section class="skills" id="skills">
+          <div class="max-width">
+            <h2 class="title">Mes Competences</h2>
+            <div class="skill-content">
+              <div class="column left">
+                <div class="text">Mes talent de creativité & experiences.</div>
+                <p>Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
+                  fondée en 1998 dans </p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+    <!-- / competence -->
+
     <!-- Contact me -->
     <!-- / Contact me -->
 
