--- a/index.html
+++ b/index.html
@@ -58,16 +58,14 @@
 
   <!-- Slider -->
   <div class="row slider">
-   <div class="col-10 mx-auto">
-     <div class="row">
-      <section class="col-sm-12 col-lg-6">
+   <div class="col-11 mx-auto">
+      <section>
         <div>
           <h4 class="bonjour"><b>Bonjour, je m'appel</b></h4>
         <h1 class="name"><b>Thomas</b> <span><b>Cissé</b></span></h1>
         <h3 class="description"><b>Je suis developpeur full-stak junior.</b></h3>
         </div>
       </section>
-     </div>
    </div>
   </div>
   <!-- / Slider -->
@@ -78,11 +76,11 @@
     <div class="row about">
       <div class="col-11 mx-auto">
         <div class="row">
-          <div class="col-md-6">
+          <div class="cool-sm-12 col-md-6">
             <img class="about-image" src="./img/main-img.jpg">
           </div>
           <div class="col-md-6 about-text">
-            <h2>Biographie</h2>
+            <h2 class="biogaphie">Biographie</h2>
             <h3>Je suis Thomas</h3>
             <p>Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
                fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
@@ -120,31 +118,14 @@
     <!-- / About me -->
 
     <!-- Parcours -->
-    <div class="row exper">
-      <div class="col-11 mx-auto">
+    <!-- <div class="row exper">
+      <div class="col-12 mx-auto">
         <div class="row">
-          <h2 class="mt-10 parcours">Mes Parcours</h2>
+          <h2 class="mt-10 parcours">Mes Parcours</h2> -->
           <!-- card -->
-          <div class="box">
+          <!-- <div class="box">
             <div class="row">
-              <div class="col-sm-12 col-md-6 col-lg-4">
-                <div class="card">
-                  <i class="fas fa-bars"></i>
-                  <div class="card-body">
-                    <h5 class="card-title">Formations</h5>
-                    <div class="para">
-                      <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
-                        fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
-                        créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia </p>
-                       <!-- <p style="text-align: center;">
-                        <a class="button" href="#">Plus</a>
-                       </p> -->
-                    </div>
-                  </div>
-                </div>
-              </div>
-  
-              <div class="col-sm-12 col-md-6 col-lg-4">
+              <div class="col-sm-12 col-md-4">
                 <div class="card">
                   <i class="fas fa-bars"></i>
                   <div class="card-body">
@@ -156,9 +137,23 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
   
-              <div class="col-sm-12 col-md-6 col-lg-4">
+              <!-- <div class="col-sm-12 col-md-4">
+                <div class="card">
+                  <i class="fas fa-bars"></i>
+                  <div class="card-body">
+                    <h5 class="card-title">Formations</h5>
+                    <div class="para">
+                      <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
+                        fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
+                        créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia </p>
+                    </div>
+                  </div>
+                </div>
+              </div> -->
+  
+              <!-- <div class="col-sm-12 col-md-4 ">
                 <div class="card">
                   <i class="fas fa-bars"></i>
                   <div class="card-body">
@@ -172,15 +167,15 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- / card -->
-        </div>
+        <!-- </div>
       </div>
-    </div>
+    </div> -->
     <!-- / Parcours -->
 
     <!-- competence -->
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-sm-12">
         <section class="skills" id="skills">
           <div class="max-width">
@@ -195,20 +190,20 @@
           </div>
         </section>
       </div>
-    </div>
+    </div> -->
     <!-- / competence -->
 
     <!-- Contact me -->
     <!-- / Contact me -->
 
     <!-- Footer -->
-    <div class="row">
-      <div class="">
+      <!-- <div class="row">
         <div class="">
+          <div class="">
 
+          </div>
         </div>
-      </div>
-    </div>
+      </div> -->
     <!-- / Footer -->
 
 
