--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- Slider -->
   <div class="row slider">
    <div class="col-11 mx-auto">
-      <section>
+      <section class="col-sm-12 col-lg-6">
         <div>
           <h4 class="bonjour"><b>Bonjour, je m'appel</b></h4>
         <h1 class="name"><b>Thomas</b> <span><b>Cissé</b></span></h1>
