--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
     <!-- / About me -->
 
     <!-- Parcours -->
-    <!-- <div class="row exper">
+    <div class="row exper">
       <div class="col-12 mx-auto">
         <div class="row">
-          <h2 class="mt-10 parcours">Mes Parcours</h2> -->
+          <h2 class="mt-10 parcours">Mes Parcours</h2>
           <!-- card -->
-          <!-- <div class="box">
+          <div class="box">
             <div class="row">
               <div class="col-sm-12 col-md-4">
                 <div class="card">
@@ -137,9 +137,9 @@
                     </div>
                   </div>
                 </div>
-              </div> -->
+              </div>
   
-              <!-- <div class="col-sm-12 col-md-4">
+              <div class="col-sm-12 col-md-4">
                 <div class="card">
                   <i class="fas fa-bars"></i>
                   <div class="card-body">
@@ -151,9 +151,9 @@
                     </div>
                   </div>
                 </div>
-              </div> -->
+              </div>
   
-              <!-- <div class="col-sm-12 col-md-4 ">
+              <div class="col-sm-12 col-md-4 ">
                 <div class="card">
                   <i class="fas fa-bars"></i>
                   <div class="card-body">
@@ -167,11 +167,11 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div> 
           <!-- / card -->
-        <!-- </div>
+        </div>
       </div>
-    </div> -->
+    </div>
     <!-- / Parcours -->
 
     <!-- competence -->
