--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </tr>
                   </tbody>
                 </table>
-                <button class="btn btn-danger mt-3">Télécharger CV</button>
+                <button class="btn btn-primary mt-3">Télécharger CV</button>
               </div>
           </div>
         </div>
@@ -121,15 +121,17 @@
     <div class="row exper">
       <div class="col-12 mx-auto">
         <div class="row">
-          <h2 class="mt-10 parcours">Mes Parcours</h2>
+          <h2 class="mt-5 parcours">Mes Parcours</h2>
           <!-- card -->
           <div class="box">
             <div class="row">
               <div class="col-sm-12 col-md-4">
                 <div class="card">
-                  <i class="fas fa-bars"></i>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="150" height="150" fill="#139DE8" class="bi bi-list mx-auto" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                  </svg>
                   <div class="card-body">
-                    <h5 class="card-title">Formations</h5>
+                    <h3 class="card-title">Formations</h3>
                     <div class="para">
                       <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
                         fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
@@ -141,9 +143,11 @@
   
               <div class="col-sm-12 col-md-4">
                 <div class="card">
-                  <i class="fas fa-bars"></i>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="150" height="150" fill="#139DE8" class="bi bi-list mx-auto" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                  </svg>
                   <div class="card-body">
-                    <h5 class="card-title">Formations</h5>
+                    <h3 class="card-title">Formations</h3>
                     <div class="para">
                       <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
                         fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
@@ -153,11 +157,13 @@
                 </div>
               </div>
   
-              <div class="col-sm-12 col-md-4 ">
+              <div class="col-sm-12 col-md-4">
                 <div class="card">
-                  <i class="fas fa-bars"></i>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="150" height="150" fill="#139DE8" class="bi bi-list mx-auto" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                  </svg>
                   <div class="card-body">
-                    <h5 class="card-title">Formations</h5>
+                    <h3 class="card-title">Formations</h3>
                     <div class="para">
                       <p class="card-text">Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
                         fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
@@ -194,39 +200,76 @@
     <!-- / competence -->
 
     <!-- Contact me -->
+    <div class="row contact">
+      <div class="col-11 mx-auto">
+        <h2 class="sm-title mt-5 ">Contact</h2>
+        <div class="row">
+          <div class="col-md-6">
+           <h3>Veuillez me <span>contacter</span></h3>
+           <section class="iconSection">
+             <div>
+               <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#139DE8" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+            </svg>
+          </div>
+             <p class="icon-text">+0022371681874</p>
+           </section>
+           <section class="iconSection">
+            <div>
+              <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#139DE8" class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z"/>
+              </svg>
+          </div>
+            <p class="icon-text">thomascisse20@gmail.com</p>
+          </section>
+          <section class="iconSection">
+            <div>
+              <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#139DE8" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+              </svg>
+          </div>
+            <p class="icon-text">Kalaban coura ACI, rue, porte</p>
+          </section>
+          </div>
+          <div class="col-md-6">
+            <h3 class="c-text">Envoyer un <span>message ici</span></h3>
+            <div class="row">
+              <div class="col-4 mb-3">
+                <label for="prenom" class="form-label">Prénom</label>
+                <input type="text" class="form-control" placeholder="prenom" aria-label="First name">
+              </div>
+              <div class="col-4 mx-5 mb-3">
+                <label for="nom" class="form-label">nom</label>
+                <input type="text" class="form-control" placeholder="nom" aria-label="Last name">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Adresse Email</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nom@example.com">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
+            </div>
+            <button class="btn btn-success mb-5">Envoyer</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- / Contact me -->
 
     <!-- Footer -->
-      <!-- <div class="row">
-        <div class="">
-          <div class="">
-
-          </div>
-        </div>
-      </div> -->
+     <footer class="pt-5">
+      <div class="col-11 foot">Créer par <a href="#">Cioudev</a> | <span class="far fa-copyright"></span> 2022 tout droits reserver.  </div>
+     </footer>
     <!-- / Footer -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
+    
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script> -->
   </body>
