--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
           <div class="col-md-6 about-text">
             <h2 class="biogaphie">Biographie</h2>
             <h3>Je suis Thomas</h3>
-            <p>Google LLC /ˈguːgəl/ est une entreprise américaine de services technologiques
-               fondée en 1998 dans la Silicon Valley, en Californie, par Larry Page et Sergey Brin, 
-               créateurs du moteur de recherche Google. C'est une filiale de la société Alphabet depuis août 2015. Wikipédia</p>
+            <p>Née à sikasso le 22 septembre 1994, j'ai fait mes études primaire et sécondaire à l'école privée catholique de sikasso.
+              J'ai en suite fait la serie science sociale au lycée Monseigneur Didier de Montclos de Sikasso (LMMS).
+              Après le bac je me suis inscrit à la Faculté des sciences Humaine et de l'Education de Bamako (FSHSE).
+              Je suis cofondateur du Centre d'Information et d'Orientation Universitaire (CIOU).
+            Après la licence j'ai fait une formation de 3 mois en gestion de projet d'entreprise et developpement à l'ONG Inverstir Dans l'Humain (IDH).
+          J'ai ensuite intégrer orange digital "kalanso" pour une formation de six mois en developpement web et mobile.</p>
                <div class="line"></div>
                <div class="col-md-6"><br>
                  <h3>Informations personnel</h3>
@@ -108,7 +111,7 @@
                     </tr>
                   </tbody>
                 </table>
-                <button class="btn btn-primary mt-3">Télécharger CV</button>
+                <button class="btn btn-primary mt-3 mb-5  ">Télécharger CV</button>
               </div>
           </div>
         </div>
