--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <!-- About me -->
    <div id="about">
     <div class="row about">
-      <div class="col-11 mx-auto">
+      <div class="col-11 mt-5 mx-auto">
         <div class="row">
           <div class="cool-sm-12 col-md-6">
             <img class="about-image" src="./img/main-img.jpg">
@@ -184,7 +184,7 @@
     <!-- / Parcours -->
     
     <!-- competence -->
-    <div class="skills container-fluid">
+    <div class="skills col-12">
       <div class="section-title">
         <h2 class="pt-5 mb-5 competences">Competences</h2>
       </div>
@@ -298,7 +298,7 @@
 
     <!-- Footer -->
      <footer class="pt-5">
-      <div class="col-11 foot">Créer par <a href="#">Cioudev</a> | <span class="far fa-copyright"></span> 2022 tout droits reserver.  </div>
+      <div class="container-fluid foot">Créer par <a href="#">Cioudev</a> | <span class="far fa-copyright"></span> 2022 tout droits reserver.  </div>
      </footer>
     <!-- / Footer -->
     <!-- Optional JavaScript; choose one of the two! -->
