--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">Accueil</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">A propos</a>
+                <li class="nav-item active">
+                  <a class="nav-link" aria-current="page" href="#">A propos</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Service</a>
+                <li class="nav-item active">
+                  <a class="nav-link" aria-current="page" href="#">Service</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Skill</a>
+                <li class="nav-item active">
+                  <a class="nav-link" aria-current="page" href="#">Skill</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Team</a>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Contact</a>
-                  </li>
+                <li class="nav-item active">
+                  <a class="nav-link" aria-current="page" href="#">Team</a>
+                </li>
+                <li class="nav-item active">
+                  <a class="nav-link" aria-current="page" href="#">Contact</a>
                 </li>
               </ul>
             </div>
