--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">
-              <img class="logo" src="./images/logo.png" >
+              <img class="logo" src="./assets/logo.png" >
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#fff" class="bi bi-list" viewBox="0 0 16 16">
@@ -81,17 +81,17 @@
       <div class="col-11 mt-5 mx-auto">
         <div class="row">
           <div class="cool-sm-12 col-md-6">
-            <img class="about-image" src="./images/main-img.jpg">
+            <img class="about-image" src="./assets/main-img.jpg">
           </div>
           <div class="col-md-6 about-text">
             <h2 class="biogaphie">Biographie</h2>
             <h3>Je suis Thomas</h3>
-            <p>Née à sikasso le 22 septembre 1994, j'ai fait mes études primaire et sécondaire à l'école privée catholique de sikasso.
+            <!-- <p>Née à sikasso le 22 septembre 1994, j'ai fait mes études primaire et sécondaire à l'école privée catholique de sikasso.
               J'ai en suite fait la serie science sociale au lycée Monseigneur Didier de Montclos de Sikasso (LMMS).
               Après le bac je me suis inscrit à la Faculté des sciences Humaine et de l'Education de Bamako (FSHSE).
               Je suis cofondateur du Centre d'Information et d'Orientation Universitaire (CIOU).
             Après la licence j'ai fait une formation de 3 mois en gestion de projet d'entreprise et developpement à l'ONG Inverstir Dans l'Humain (IDH).
-          J'ai ensuite intégrer orange digital "kalanso" pour une formation de six mois en developpement web et mobile.</p>
+          J'ai ensuite intégrer orange digital "kalanso" pour une formation de six mois en developpement web et mobile.</p> -->
                <div class="line"></div>
                <div class="col-md-6"><br>
                  <h3>Informations personnel</h3>
