--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
               </svg>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#accueil">Accueil</a>
+              <ul class="navbar-nav mx-auto mt-4">
+                <li class="nav-link nav-item active">
+                  <a aria-current="page" href="#accueil">Accueil</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" aria-current="page" href="#about">A propos</a>
+                <li class="nav-link nav-item active">
+                  <a aria-current="page" href="#about">A propos</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" aria-current="page" href="#services">Services</a>
+                <li class="nav-link nav-item active">
+                  <a aria-current="page" href="#services">Services</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" aria-current="page" href="#skill">Compétences</a>
+                <li class="nav-link nav-item active">
+                  <a aria-current="page" href="#skill">Compétences</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" aria-current="page" href="#portfolio">Portfolio</a>
+                <li class="nav-link nav-item active">
+                  <a aria-current="page" href="#portfolio">Portfolio</a>
                 </li>
-                <li class="nav-item active">
-                  <a class="nav-link" aria-current="page" href="#contact">Contact</a>
+                <li class="nav-link nav-item active">
+                  <a aria-current="page" href="#contact">Contact</a>
                 </li>
               </ul>
             </div>
@@ -84,25 +84,31 @@
             <img class="about-image" src="./assets/main-img.jpg">
           </div>
           <div class="col-md-6 about-text">
-            <h2 class="biogaphie">Biographie</h2>
+            <h2 class="biogaphie">A Propos</h2>
             <h3>Je suis Thomas</h3>
-            <!-- <p>Née à sikasso le 22 septembre 1994, j'ai fait mes études primaire et sécondaire à l'école privée catholique de sikasso.
-              J'ai en suite fait la serie science sociale au lycée Monseigneur Didier de Montclos de Sikasso (LMMS).
-              Après le bac je me suis inscrit à la Faculté des sciences Humaine et de l'Education de Bamako (FSHSE).
-              Je suis cofondateur du Centre d'Information et d'Orientation Universitaire (CIOU).
-            Après la licence j'ai fait une formation de 3 mois en gestion de projet d'entreprise et developpement à l'ONG Inverstir Dans l'Humain (IDH).
-          J'ai ensuite intégrer orange digital "kalanso" pour une formation de six mois en developpement web et mobile.</p> -->
+            <p>Je suis un développeur web junior en
+              quête d'expériences professionnelles
+              dans le développement, la
+              maintenance, la mise à jour et le
+              déploiement de site web et
+              d'application mobile.
+              J'aime travailler de manière à prendre part à
+              toutes les étapes de réalisation de projet de
+              site web et d'application mobile,
+              précisement de la modelisation jusqu'à 
+              l'integration finale.
+              </p>
                <div class="line"></div>
                <div class="col-md-6"><br>
                  <h3>Informations personnel</h3>
                 <table>
                   <tbody>
                     <tr>
-                      <th>Name:</th>
-                      <td>T</td>
+                      <th>Taille:</th>
+                      <td>1 m 73</td>
                     </tr>
                     <tr>
-                      <th>Age:</th>
+                      <th>poid:</th>
                       <td>T</td>
                     </tr>
                     <tr>
@@ -124,13 +130,12 @@
    </section>
     <!-- / About me -->
 
-    <!-- Parcours -->
-    <section id="services">
+    <!-- Service -->
+    <!-- <section id="services">
       <div class="row exper">
         <div class="col-12 mx-auto">
           <div class="row">
             <h2 class="pt-5 mt-5 parcours">Mes Services</h2>
-            <!-- card -->
             <div class="box">
               <div class="row">
                 <div class="col-sm-12 col-md-4">
@@ -182,12 +187,11 @@
                 </div>
               </div>
             </div> 
-            <!-- / card -->
           </div>
         </div>
       </div>
-    </section>
-    <!-- / Parcours -->
+    </section> -->
+    <!-- / Service -->
     
     <!-- competence -->
     <section id="skill">
@@ -246,68 +250,9 @@
 
     <!-- portfolio -->
         <section id="portfolio">
-          <div class="portfolio py-5">
+          <div class="portfolio">
             <div class="container text-center py-5">
               <h2 class="text-center pb-5 portfolio-title">Portfolio</h2>
-                <div class="control">
-                  <ul>
-                    <li class="button"><b>All</b></li>
-                    <li class="button"><b>Site web</b></li>
-                    <li class="button"><b>Applications</b></li>
-                  </ul>
-                </div>
-            <div class="row">
-              <div class="col-lg-4">
-                <div class="item">
-                  <img src="images/dev1.jpg" class="img-fluid" alt="">
-                  <span><svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                  </svg></span>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="item">
-                  <img src="images/dev1.jpg" class="img-fluid" alt="">
-                  <span><svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                  </svg></span>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="item">
-                  <img src="images/dev1.jpg" class="img-fluid" alt="">
-                  <span><svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                  </svg></span>
-                </div>
-              </div>
-                </div>
-                <div class="row pt-3">
-                  <div class="col-lg-4">
-                    <div class="item">
-                      <img src="images/dev1.jpg" class="img-fluid" alt="">
-                      <span><svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                      </svg></span>
-                    </div>
-                  </div>
-                  <div class="col-lg-4">
-                    <div class="item">
-                      <img src="images/dev.webp" class="img-fluid" alt="">
-                      <span><svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                      </svg></span>
-                    </div>
-                  </div>
-                  <div class="col-lg-4">
-                    <div class="item">
-                      <img src="images/dev.webp" class="img-fluid" alt="">
-                      <span><svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-                      </svg></span>
-                    </div>
-                  </div>
-                    </div>
                   </div>
               </div>
         </section>
