--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <div class="hero">
       <!-- Navbar -->
   <section class="navbar">    
-  <div class="col-lg-12">
+  <div class="col-lg-12 mx-auto">
     <div class="row main-navbar">
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <img class="logo" src="assets/images/logo.png" >
+        <nav class="navbar navbar-expand-lg ">
+          <img src="assets/images/logo.png" >
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <i class="bi bi-list" style="font-size: 2rem; color: #139DE8;"></i>
-             </button>
+             </button>  
              <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav mt-4">
                  <li class="nav-link nav-item active">
@@ -117,11 +117,11 @@
                   <tbody>
                     <tr>
                       <th>Taille:</th>
-                      <td>1 m 73</td>
+                      <td>1 m 67</td>
                     </tr>
                     <tr>
                       <th>poid:</th>
-                      <td>T</td>
+                      <td>73 Kg</td>
                     </tr>
                     <tr>
                       <th>Adresse:</th>
