--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <section class="navbar">    
   <div class="col-lg-12 mx-auto">
     <div class="row main-navbar">
-        <nav class="navbar navbar-expand-lg ">
-          <img src="assets/images/logo.png" >
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <img src="assets/images/logo.png">
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                <i class="bi bi-list" style="font-size: 2rem; color: #139DE8;"></i>
