--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 
 <!-- Slider -->
 <section id="accueil">
-  <div class="col-lg-5 ">
-  <div class="row slider mx-auto pl-5">
-    <div>
+  <div class="col-lg-10">
+  <div class="row mx-auto slider">
+    <div class="col-7">
       <h5 class="bonjour mb-4"><b>Bonjour, je m'appel</b></h5>
     <h1 class="name"><b>Thomas</b> <span><b>Cissé</b></span></h1>
-    <h4 class="description"><b>Je suis developpeur full-stak junior.</b></h4>
+    <h4 class="description"><b>Je suis développeur full-stak junior.</b></h4>
     </div>
     </div>
    </div>
@@ -89,9 +89,9 @@
   <div class="col-lg-12">
     <div class="row">
       <div class="col-lg-6">
-        <div class="mx-auto mb-5 about-image">
+       <div class="col-10 mt-5 mb-5 mx-auto">
           <img class="about-image" src="assets/images/main-img.jpg">
-        </div>
+       </div>
       </div>
 
     <div class="col-lg-6 about-text">
@@ -121,7 +121,7 @@
                     </tr>
                     <tr>
                       <th>poid:</th>
-                      <td>73 Kg</td>
+                      <td>6 Kg</td>
                     </tr>
                     <tr>
                       <th>Adresse:</th>
@@ -470,6 +470,7 @@
 <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 <!-- Template Main JS File -->
+<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 <script src="assets/js/main.js"></script>
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   
