--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="hero">
       <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container mt-3">
+      <div class="container-fluid mt-3">
         <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a>
         <button 
         class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
