--- a/index.html
+++ b/index.html
@@ -28,32 +28,32 @@
     <div class="hero">
       <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container-fluid mt-3">
+      <div class="container-fluid">
         <a class="navbar-brand" href="#"><img src="assets/images/logo.png"></a>
         <button 
         class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="border:none;">
          <i class="bi bi-list" style="font-size: 2rem; color:#139DE8;"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav .navbar-right mt-4">
-            <li class="nav-link nav-item active">
-              <a aria-current="page" href="#accueil" >Accueil</a>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav navbar-right">
+            <li class="nav-item active">
+              <a class="nav-link" aria-current="page" href="#accueil">Accueil</a>
             </li>
-            <li class="nav-link nav-item active">
-              <a aria-current="page" href="#about">A propos</a>
+            <li class="nav-item active">
+              <a class="nav-link" aria-current="page" href="#about">A propos</a>
             </li>
             <!-- <li class="na   v-link nav-item active">
               <a aria-current="page" href="#services">Services</a>
             </li> -->
-            <li class="nav-link nav-item active">
-              <a aria-current="page" href="#skill">Compétences</a>
+            <li class="nav-item active">
+              <a class="nav-link" aria-current="page" href="#skill">Compétences</a>
             </li>
-            <li class="nav-link nav-item active">
-              <a aria-current="page" href="#portfolio">Portfolio</a>
+            <li class="nav-item active">
+              <a class="nav-link" aria-current="page" href="#portfolio">Portfolio</a>
             </li>
-            <li class="nav-link nav-item active">
-              <a aria-current="page" href="#contact">Contact</a>
+            <li class="nav-item active">
+              <a class="nav-link" aria-current="page" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -80,59 +80,58 @@
 
 <!-- About me -->
 <section id="about">
-  <div class="col-lg-12">
-    <div class="row mx-auto">
-      <div class="col-6">
-       <div class="col-10 mt-5 mb-5">
-          <img class="about-image" src="assets/images/main-img.jpg">
-       </div>
-      </div>
-
-    <div class="col-lg-6 about-text">
-      <div class="col-10 mx-auto">
-        <h2 class="mx-auto mb-5 about">A Propos</h2>
-        <h3>Je suis Thomas.</h3>
-        <p  >Je suis un développeur web junior en
-          quête d'expériences professionnelles
-          dans le développement, la
-          maintenance, la mise à jour et le
-          déploiement de site web et
-          d'application mobile.
-          J'aime travailler de manière à prendre part à
-          toutes les étapes de réalisation de projet de
-          site web et d'application mobile,
-          précisement de la modelisation jusqu'à 
-          l'integration finale.
-          </p>
-        <div class="line"></div>
-        <div class="col-md-7"><br>
-          <h3>Informations personnel</h3>
-                <table>
-                  <tbody>
-                    <tr>
-                      <th>Taille:</th>
-                      <td>1 m 67</td>
-                    </tr>
-                    <tr>
-                      <th>poid:</th>
-                      <td>65Kg</td>
-                    </tr>
-                    <tr>
-                      <th>Adresse:</th>
-                      <td>Kalaban Coura ACI</td>
-                    </tr>
-                    <tr>
-                      <th>Nationalité:</th>
-                      <td>Malienne</td>
-                    </tr>
-                  </tbody>
-                </table>
-                <a href="./assets/Thomas_cv/CV.pdf"><button class="btn btn-primary mt-5 mb-5">Télécharger CV</button></a>
-              </div>
+    <div class="col-lg-12">
+      <div class="row mx-auto">
+        <div class="col-lg-6">
+         <div class="col-8 mt-5 mb-5 mx-auto ">
+            <img class="about-image" src="assets/images/main-img.jpg">
+         </div>
+        </div> 
+      <div class="col-lg-6 about-text">
+        <div class="col-10 mx-auto">
+          <h2 class=" mb-5 about">A Propos</h2>
+          <h3>Je suis Thomas.</h3>
+          <p  >Je suis un développeur web junior en
+            quête d'expériences professionnelles
+            dans le développement, la
+            maintenance, la mise à jour et le
+            déploiement de site web et
+            d'application mobile.
+            J'aime travailler de manière à prendre part à
+            toutes les étapes de réalisation de projet de
+            site web et d'application mobile,
+            précisement de la modelisation jusqu'à 
+            l'integration finale.
+            </p>
+          <div class="line"></div>
+          <div class="col-md-7"><br>
+            <h3>Informations personnel</h3>
+                  <table>
+                    <tbody>
+                      <tr>
+                        <th>Taille:</th>
+                        <td>1 m 67</td>
+                      </tr>
+                      <tr>
+                        <th>poid:</th>
+                        <td>65 Kg</td>
+                      </tr>
+                      <tr>
+                        <th>Adresse:</th>
+                        <td>Kalaban Coura ACI</td>
+                      </tr>
+                      <tr>
+                        <th>Nationalité:</th>
+                        <td>Malienne</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <a href="./assets/Thomas_cv/CV.pdf"><button class="btn btn-primary mt-5 mb-5">Télécharger CV</button></a>
+                </div>
+               </div>
              </div>
            </div>
-         </div>
-         </div>
+          </div>
        </section>
   <!-- / About me -->
 
