--- a/index.html
+++ b/index.html
@@ -35,25 +35,25 @@
          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="border:none;">
          <i class="bi bi-list" style="font-size: 2rem; color:#139DE8;"></i>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse mt-3 justify-content-end" id="navbarSupportedContent">
           <ul class="navbar-nav navbar-right">
             <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="#accueil">Accueil</a>
+              <a aria-current="page" href="#accueil">Accueil</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="#about">A propos</a>
+              <a aria-current="page" href="#about">A propos</a>
             </li>
             <!-- <li class="na   v-link nav-item active">
               <a aria-current="page" href="#services">Services</a>
             </li> -->
             <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="#skill">Compétences</a>
+              <a  aria-current="page" href="#skill">Compétences</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="#portfolio">Portfolio</a>
+              <a  aria-current="page" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="#contact">Contact</a>
+              <a aria-current="page" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -66,10 +66,10 @@
 <div class="container mt-5">
   <div class="col-lg-12">
     <div class="row mx-auto slider">
-      <div class="col-6">
+      <div class="col-7">
         <h5 class="bonjour mb-4"><b>Bonjour, je m'appel</b></h5>
       <h1 class="name"><b>Thomas</b> <span><b>Cissé</b></span></h1>
-      <h4 class="description"><b>Je suis développeur full-stak junior.</b></h4>
+      <h4 class="description"><b></b></h4>
       </div>
       </div>
      </div>
