--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="row mx-auto">
         <div class="col-lg-6">
          <div class="col-8 mt-5 mb-5 mx-auto ">
-            <img class="about-image" src="assets/images/main-img.jpg">
+            <img class="about-image" src="assets/images/thomasC.jpg">
          </div>
         </div> 
       <div class="col-lg-6 about-text">
@@ -101,7 +101,7 @@
             toutes les étapes de réalisation de projet de
             site web et d'application mobile,
             précisement de la modelisation jusqu'à 
-            l'integration finale.
+            l'integration.
             </p>
           <div class="line"></div>
           <div class="col-md-7"><br>
@@ -207,45 +207,53 @@
       <div class="row skill-content">
         <div class="col-lg-5 mx-auto">
           <div class="progress">
-            <span class="skill">HTML<i class="val">100%</i></span>
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+            <span class="skill">HTML<i class="val">70%</i></span>
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+            aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
           </div>
 
           <div class="progress">
-            <span class="skill">CSS<i class="val">90%</i></span>
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%"></div>
+            <span class="skill">CSS<i class="val">60%</i></span>
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+             aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
           </div>
 
           <div class="progress">
             <span class="skill">JavaScript<i class="val">50%</i></span>
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
           </div>
 
           <div class="progress">
-            <span class="skill">JAVA<i class="val">70%</i></span>
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+            <span class="skill">JAVA<i class="val">50%</i></span>
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
           </div>
           
         </div>
         <div class="col-lg-5 mx-auto mb-5">
           <div class="progress">
             <span class="skill">SpringBoot<i class="val">50%</i></span>
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+            aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"></div>
           </div>
 
           <div class="progress">
-            <span class="skill">Angular<i class="val">70%</i></span>
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
+            <span class="skill">Angular<i class="val">60%</i></span>
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+            aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
           </div>
 
           <div class="progress">
-            <span class="skill">Wordpress/CMS<i class="val">80%</i></span>
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+            <span class="skill">Wordpress/CMS<i class="val">70%</i></span>
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+            aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"></div>
           </div>
 
           <div class="progress">
             <span class="skill">Photoshop<i class="val">20%</i></span>
-            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"></div>
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
+            aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%"></div>
           </div>
         </div>
         </div>
